--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <div class="flex flex-wrap gap-4 items-end">
         <div class="w-full md:w-auto">
           <label class="block text-sm font-medium text-gray-700 mb-1">Floors</label>
-          <input type="number" id="numFloors" value="5" min="2" max="20"
+          <input type="number" id="numFloors" value="" min="2" max="20"
             class="w-full md:w-32 border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
         </div>
 
         <div class="w-full md:w-auto">
           <label class="block text-sm font-medium text-gray-700 mb-1">Lifts</label>
-          <input type="number" id="numLifts" value="2" min="1" max="10"
+          <input type="number" id="numLifts" value="" min="1" max="10"
             class="w-full md:w-32 border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
         </div>
 
